# aitp

./: .coverage  .dockerignore  .env.example  .env.prod  .env.template  .gitattributes  .gitignore  .kelan.pid  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  agent-identity.key  aitp.toml  antigravity.json  attack_results.txt  build_log.txt  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docs.md  expert_validation_v2.txt  expert_validation_v3.txt  final_v1beta_validation.txt  final_validation.txt  fix_tests.py  install.sh  kelan.db  kelan_documentation.md  launch.sh  local-agent.toml  package-lock.json  pyproject.toml  pyrightconfig.json  (+10 more)
.rust_archive/aitp-ai-engine/: Cargo.toml
.rust_archive/aitp-ai-engine/src/: lib.rs  ollama.rs  policy.rs  scorer.rs  telemetry.rs
.rust_archive/aitp-ai-engine/src/providers/: claude.rs  mod.rs  ollama.rs  rules.rs
.rust_archive/aitp-control-plane/: Cargo.toml
.rust_archive/aitp-control-plane/src/: main.rs  revocation.rs  websocket.rs
.rust_archive/aitp-observability/: Cargo.toml
.rust_archive/aitp-observability/src/: metrics.rs  tracing_setup.rs
.rust_archive/aitp-server/: Cargo.toml
.rust_archive/aitp-server/migrations/: 0003_sessions.sql  0004_audit_chain.sql  0007_policies.sql  0009_multitenant_isolation.sql  0010_verdicts_view.sql
.rust_archive/aitp-server/src/: config.rs  error.rs  lib.rs  license.rs  main.rs  metrics.rs  state.rs  tls.rs
.rust_archive/aitp-server/src/agent/: cve.rs  mitre.rs  mod.rs  ollama_agent.rs
.rust_archive/aitp-server/src/api/: agentic.rs  config.rs  crypto.rs  devsecops.rs  middleware.rs  mod.rs  policies.rs  sessions.rs  stats.rs  threat.rs
.rust_archive/aitp-server/src/crypto/: mod.rs
.rust_archive/aitp-server/src/db/: migrations.rs  queries.rs
.rust_archive/aitp-server/src/ws/: mod.rs
.rust_archive/aitp-server/tests/: integration_tests.rs
.rust_archive/kelan-crypto/: Cargo.toml
.rust_archive/kelan-crypto/src/: hybrid_sig.rs  identity.rs  kem.rs
.rust_archive/tools/kelan-license-tool/: Cargo.toml
aitp-ai-engine/: Cargo.toml
aitp-ai-engine/src/: engine.rs  gemini_client.rs  lib.rs  ollama.rs  provider.rs  scorer.rs
aitp-ai-engine/src/providers/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  rules.rs
aitp-ai-engine/tests/: TODO_GEMINI_TESTS.md  gemini_integration_test.rs
aitp-client/: Cargo.toml
aitp-client/src/: channel.rs  config.rs  daemon.rs  enroll.rs  handshake.rs  heartbeat.rs  identity.rs  install.rs  interceptor.rs  ipc.rs  main.rs  metrics.rs  session.rs
aitp-client/src/interceptor/: iptables.rs  mod.rs  monitor.rs  proxy.rs
aitp-control-plane/: Cargo.toml
aitp-control-plane/src/: main.rs  registry.rs  server.rs  websocket.rs
aitp-core/: Cargo.toml
aitp-core/fuzz/: Cargo.toml
aitp-core/fuzz/fuzz_targets/: fuzz_gemini_response.rs  fuzz_handshake_message.rs
aitp-core/src/: config.rs  events.rs  framing.rs  header.rs  intent_fingerprint.rs  lib.rs  session.rs  session_dna.rs  transport.rs
aitp-core/src/server/: alert_engine.rs  state.rs
aitp-core/tests/: attack_suite.rs  config_test.rs  load_test.rs  property_tests.proptest-regressions  property_tests.rs  protocol_integration.rs  two_node_handshake.rs
aitp-identity/: Cargo.toml
aitp-identity/src/: identity.rs  lib.rs  resolver.rs  token.rs  verification.rs
aitp-sdk/: Cargo.toml  README.md
aitp-sdk/examples/: ai_model_connector.rs  multi_session.rs  revoke_demo.rs  simple_client.rs  simple_echo_server.rs
aitp-sdk/src/: client.rs  lib.rs  server.rs  types.rs
aitp-server/: Cargo.toml
aitp-server/data/: aitp.db  aitp.db-shm  aitp.db-wal
aitp-server/migrations/: 0001_organisations.sql  0002_entities.sql  0005_baselines.sql  0006_incidents.sql  0008_pq_crypto.sql
aitp-server/scripts/: generate_certs.sh
aitp-server/src/: auth.rs  budget.rs  config.rs  error.rs  lib.rs  license.rs  main.rs  metrics.rs  state.rs  tls.rs
aitp-server/src/agent/: cve.rs  gemini_agent.rs  mod.rs  types.rs
aitp-server/src/ai/: gemini.rs  mod.rs  ollama.rs
aitp-server/src/api/: auth.rs  config.rs  crypto.rs  entities.rs  middleware.rs  mod.rs  sentinel.rs  sessions.rs  stats.rs  threat.rs
aitp-server/src/crypto/: algorithm.rs  hybrid_sig.rs  identity.rs  kem.rs  mod.rs
aitp-server/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
aitp-server/src/enforcement/: mod.rs  software.rs
aitp-server/src/identity/: crypto.rs  mod.rs
aitp-server/src/persistence/: bulk_insert.rs
aitp-server/src/protocol/: handshake.rs  mod.rs  reliable_udp.rs  session.rs
aitp-server/src/sentinel/: anomaly.rs  baseline.rs  mod.rs  threat.rs
aitp-server/src/trust/: circuit_breaker.rs  fallback_rules.rs  gemini.rs  mod.rs  ollama_engine.rs  rules.rs
aitp-server/src/ws/: handler.rs  mod.rs
aitp-server/static/: index.html
aitp-server/tests/: integration_tests.rs  multi_tenant_test.rs  production_functional_tests.rs
kelan-ebpf/kelan-ebpf-loader/: Cargo.toml  build.rs
kelan-ebpf/kelan-ebpf-loader/src/: lib.rs  linux.rs  main.rs  userspace.rs
kelan-ebpf/kelan-ebpf-program/: Cargo.toml
kelan-ebpf/kelan-ebpf-program/src/: main.rs
kelan-python/: .env.example  Dockerfile.python  conftest.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
kelan-python/kelan/: __init__.py  config.py  database.py
kelan-python/kelan/ai/: __init__.py  engine.py  ollama_client.py  prompts.py
kelan-python/kelan/enforcement/: __init__.py  ebpf_bridge.py
kelan-python/kelan/protocol/: __init__.py  session.py
kelan-python/kelan/sentinel/: __init__.py  anomaly.py
kelan-python/kelan/server/: __init__.py  main.py  models.py
kelan-python/kelan/simulation/: engine.py
kelan-python/scripts/: run_attacks.py  start_server.py  verify_ollama.py
kelan-python/tests/: test_kelan.py
kelan-sdk/: Cargo.toml  README.md
kelan-sdk/examples/: minimal_client.rs  minimal_server.rs  multi_tenant.rs
kelan-sdk/src/: client.rs  config.rs  error.rs  lib.rs  protocol.rs  server.rs  session.rs
(+276 files in other folders)
