[workspace]
resolver = "2"
members = [
    "aitp-core",
    "aitp-identity",
    "aitp-ai-engine",
    "aitp-control-plane",
    "aitp-sdk",
    "aitp-observability",
    "aitp-web",
    # aitp-ebpf excluded — requires Linux + clang for BPF compilation
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AITP Contributors"]
license = "MIT"
description = "Adaptive Intent Transport Protocol — identity-first, intent-bound transport for AI systems"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
dashmap = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
axum = "0.8"
prometheus = { version = "0.13", default-features = false }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
governor = "0.8"
hyper = { version = "1", features = ["full"] }
proptest = "1.6"
ratatui = "0.30"
crossterm = "0.28"
colored = "2"
rustyline = "15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
