[package]
name = "aitp-ai-engine"
version.workspace = true
edition.workspace = true
description = "AITP AI trust scoring engine — sub-5ms deterministic trust evaluation"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
