[package]
name = "aitp-client"
version = "0.3.0"
edition = "2021"
description = "AITP Client Agent — lightweight daemon for device-level identity and intent enforcement"

[[bin]]
name = "aitp-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
hex = "0.4"
colored = "2"
dotenvy = "0.15.7"
