[package]
name = "aitp-core"
version.workspace = true
edition.workspace = true
description = "AITP transport protocol engine — packet headers, handshake, sessions, and UDP transport"

[[bin]]
name = "aitp-node"
path = "src/bin/aitp_node.rs"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

aitp-identity = { path = "../aitp-identity" }
aitp-ai-engine = { path = "../aitp-ai-engine" }
aitp-observability = { path = "../aitp-observability" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
