[package]
name = "aitp-core"
version.workspace = true
edition.workspace = true
description = "AITP transport protocol engine — packet headers, handshake, sessions, and UDP transport"

[[bin]]
name = "aitp-node"
path = "src/bin/aitp_node.rs"

[[bin]]
name = "aitp-server"
path = "src/bin/aitp_server.rs"

[[bin]]
name = "aitp-client"
path = "src/bin/aitp_client.rs"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
pqcrypto-traits = { workspace = true }
pqcrypto-mldsa = { workspace = true }
pqcrypto-mlkem = { workspace = true }
clap = { workspace = true, features = ["env"] }
toml = { workspace = true }

aitp-identity = { path = "../aitp-identity" }
aitp-ai-engine = { path = "../aitp-ai-engine" }
aitp-observability = { path = "../aitp-observability" }
ratatui = { workspace = true }
crossterm = { workspace = true }
colored = { workspace = true }
rustyline = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
x25519-dalek = { version = "2", features = ["reusable_secrets"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }

[[test]]
name = "attack_suite"
path = "tests/attack_suite.rs"
