[package]
name = "aitp-sdk"
version.workspace = true
edition.workspace = true
description = "AITP developer SDK — connect AI systems in 10 lines of code"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }

aitp-core = { path = "../aitp-core" }
aitp-identity = { path = "../aitp-identity" }
aitp-ai-engine = { path = "../aitp-ai-engine" }

[[example]]
name = "simple_echo_server"
path = "examples/simple_echo_server.rs"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "ai_model_connector"
path = "examples/ai_model_connector.rs"

[[example]]
name = "multi_session"
path = "examples/multi_session.rs"

[[example]]
name = "revoke_demo"
path = "examples/revoke_demo.rs"
