[package]
name        = "kelan-sdk"
version     = "0.3.0"
edition     = "2021"
description = "Agentic AI security SDK for the Kelan Intelligence Core"
repository  = "https://github.com/kelan-security/kelan-sdk"
homepage    = "https://kelansecurtity.io"
documentation = "https://docs.rs/kelan-sdk"
license     = "MIT"
keywords    = ["security", "network", "ebpf", "ai", "zero-trust"]
categories  = ["network-programming", "authentication", "cryptography"]
readme      = "README.md"
exclude     = ["tests/", "benches/", ".github/"]

[dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm      = "0.10"
sha2         = "0.10"
rand         = "0.8"
reqwest      = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
anyhow       = "1"
thiserror    = "1"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
tracing      = "0.1"
toml         = "0.8"

[dev-dependencies]
tokio-test   = "0.4"
