[package]
name = "aitp-ai-engine"
version.workspace = true
edition.workspace = true
description = "AITP AI trust scoring engine — sub-5ms deterministic trust evaluation"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
governor = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
async-trait = "0.1.89"
moka = { version = "0.12.14", features = ["future", "sync"] }
hex = "0.4.3"
aitp-identity = { version = "0.1.0", path = "../aitp-identity" }
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
