[package]
name = "aitp-observability"
version.workspace = true
edition.workspace = true
description = "AITP observability — Prometheus metrics and structured JSON tracing"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }
once_cell = "1"
