[package]
name = "aitp-server"
version = "0.3.0"
edition = "2021"
description = "AITP Intelligence Core Server — centralized agentic AI security gateway"

[[bin]]
name = "aitp_server"
path = "src/main.rs"

[[bin]]
name = "kelan-doctor"
path = "src/bin/kelan-doctor.rs"

[lib]
name = "aitp_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "postgres", "runtime-tokio-native-tls", "chrono", "uuid", "macros", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pqcrypto-mldsa   = { workspace = true }
pqcrypto-mlkem   = { workspace = true }
pqcrypto-traits  = { workspace = true }
ed25519-dalek    = { workspace = true }
x25519-dalek     = { workspace = true }
sha2             = { workspace = true }
sha3             = { workspace = true }
rand             = { workspace = true }
zeroize          = { workspace = true }
aes-gcm = "0.10"
keyring = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["compression-gzip", "cors", "fs", "set-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls-pemfile = "2.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
tokio-tungstenite = "0.21"
bytes = "1"
dotenvy = "0.15"
hex = "0.4"
base64 = "0.21"
http-body-util = "0.1"
dashmap = "6"
num_cpus = "1.17.0"
moka = { version = "0.12.14", features = ["future"] }
zerocopy = { version = "0.7", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }
http = "1"
libc = "0.2"
kelan-ebpf-loader = { path = "../kelan-ebpf/kelan-ebpf-loader" }
kelan-crypto  = { path = "../kelan-crypto" }
prometheus    = { version = "0.13", default-features = false, features = ["process"] }
lazy_static   = "1"
futures-util  = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
tokio   = { version = "1", features = ["test-util", "full"] }
reqwest = { version = "0.12", features = ["json"] }
assert_cmd = "2"
uuid    = { version = "1", features = ["v4"] }
wiremock = "0.6"

[features]
ebpf-native = ["kelan-ebpf-loader/ebpf-native"]

