[package]
name    = "kelan-ebpf-loader"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow    = "1"
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
aya         = { version = "0.12", features = ["async_tokio"] }
aya-log     = "0.1"
aya-obj     = "0.1"

[dev-dependencies]
tokio-test = "0.4"
